--- a/src/email-templates/template.html
+++ b/src/email-templates/template.html
@@ -33,8 +33,8 @@
       <ul>
         {{#each learningItems}}
         <li>
-          <h3 class="title">{{this.title}}</h3>
-          <p class="quote">{{this.quote}}</p>
+          <h3 class="title">{{this.author}}</h3>
+          <p class="quote">{{this.text}}</p>
         </li>
         {{/each}}
       </ul>
