Added title to highlights and email

--- a/src/email-templates/template.html
+++ b/src/email-templates/template.html
@@ -33,7 +33,7 @@
       <ul>
         {{#each learningItems}}
         <li>
-          <h3 class="title">{{this.author}}</h3>
+          <h3 class="title">{{this.title}}</h3>
           <p class="quote">{{this.text}}</p>
         </li>
         {{/each}}
